# rust_course_fca

./: Cargo.toml
src/aula004_custom_compiler_rules/: Cargo.toml
src/aula005_desestruturing_tuples/: Cargo.toml
src/aula005_desestruturing_tuples/src/: main.rs
src/aula006_double_doth/: Cargo.toml
src/aula006_double_doth/src/: main.rs
src/aula007_convert_type/: Cargo.toml
src/aula007_convert_type/src/: main.rs
src/aula008_comparing_types/: Cargo.toml
src/aula008_comparing_types/src/: main.rs
src/aula009_const_max/: Cargo.toml
src/aula009_const_max/src/: main.rs
src/aula010_checked_add/: Cargo.toml
src/aula010_checked_add/src/: main.rs
src/aula011_number_systems/: Cargo.toml
src/aula011_number_systems/src/: main.rs
src/aula012_float/: Cargo.toml
src/aula012_float/src/: main.rs
src/aula013_float_precision/: Cargo.toml
src/aula013_float_precision/src/: main.rs
src/aula014_for_loop/: Cargo.toml
src/aula014_for_loop/src/: main.rs
src/aula015_import_ops/: Cargo.toml
src/aula015_import_ops/src/: main.rs
src/aula016_exercises/: Cargo.toml
src/aula016_exercises/src/: main.rs
src/aula017_logical_operators/: Cargo.toml
src/aula017_logical_operators/src/: main.rs
src/aula018_bitwise_operators/: Cargo.toml
src/aula018_bitwise_operators/src/: main.rs
src/aula04/: Cargo.toml
src/aula04/src/: main.rs
src/aula05/: Cargo.toml
src/aula05/src/: main.rs
src/aula06/: Cargo.toml
src/aula06/src/: main.rs
