[package]
name = "rust_codes_fca"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = ["./src/aula004_custom_compiler_rules","./src/aula005_desestruturing_tuples","./src/aula006_double_doth","./src/aula007_convert_type","./src/aula008_comparing_types","./src/aula009_const_max","./src/aula010_checked_add","./src/aula011_number_systems","./src/aula012_float","./src/aula013_float_precision","./src/aula014_for_loop","./src/aula015_import_ops","./src/aula016_exercises","./src/aula017_logical_operators","./src/aula018_bitwise_operators"]